--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "school-management",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/app.ts",
   "scripts": {
     "lint": "ts-standard",
-    "dev": "ts-node-dev src/index.ts",
-    "start": "node build/index.js",
+    "dev": "ts-node-dev src/app.ts",
+    "start": "node build/app.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
