--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "ts-node-dev": "^2.0.0"
   },
   "eslintConfig": {
     "parserOptions": {
